Added Einstein Call out in LWC

--- a/force-app/main/default/classes/FileUploadController.cls
+++ b/force-app/main/default/classes/FileUploadController.cls
@@ -8,6 +8,15 @@ public with sharing class FileUploadController {
         return ImageUtility.getBlobValue(contentVersionId);
     }
 
+    @AuraEnabled
+    public static EinsteinOCRPredictionResponseWrapper initiateOCRScan(String base60Image){
+        if(String.isBlank(base60Image)){
+            throw new Custom_FileUploadException('base60Image content is missing');
+        }
+        String reponse = OCRUtility.initiateOCRScan(base60Image);
+        return OCRUtility.parseResponse(reponse);
+    }
+
     //custom exception class to throw error
     public Class Custom_FileUploadException extends Exception {
     }
