--- a/force-app/main/default/classes/FileUploadController.cls
+++ b/force-app/main/default/classes/FileUploadController.cls
@@ -13,8 +13,18 @@ public with sharing class FileUploadController {
         if(String.isBlank(base60Image)){
             throw new Custom_FileUploadException('base60Image content is missing');
         }
-        String reponse = OCRUtility.initiateOCRScan(base60Image);
-        return reponse;
+        if(false){
+            String reponse = OCRUtility.initiateOCRScan(base60Image);
+            EinsteinOCRPredictionResponseWrapper einsteinOCRPredictionResponseWrapper = OCRUtility.parseResponse(reponse);
+            OCRDetailsWrapper ocrDetails = new OCRDetailsWrapper(einsteinOCRPredictionResponseWrapper);
+            return JSON.serializePretty(ocrDetails.getTagValuesMap());
+        }else{
+            Integration_Tracker__c tracker = [SELECT Id, Name, Response__c FROM Integration_Tracker__c WHERE Name = 'INT-0006' LIMIT 1];
+            EinsteinOCRPredictionResponseWrapper wrp = OCRUtility.parseResponse(tracker.Response__c);
+            OCRDetailsWrapper ocrDetails = new OCRDetailsWrapper(wrp);
+            return JSON.serializePretty(ocrDetails.getTagValuesMap());
+        }
+
     }
 
     //custom exception class to throw error
